tests/unit/default/syntax-error/078-create-table-dot-column-after-name.x.t
---- IN ----
+%table.name:int>that|
---- OUT ----
---- ERR ----
syntax: expected EOL after `...e:int>that` near `|` at position 21 - at line 1
---- EXIT ----
1
